k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tc02-hello-world

spec:
  replicas: 1

  selector:
    matchLabels:
      app: tc02-hello-world

  template:
    metadata:
      labels:
        app: tc02-hello-world

    spec:
      containers:
        - name: tc02-hello-world
          image: 822424645857.dkr.ecr.us-east-1.amazonaws.com/tc02-hello-world:latest
          ports:
            - containerPort: 5001
