k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: tc02-hello-world-service

spec:
  selector:
    app: tc02-hello-world

  ports:
    - port: 80
      targetPort: 5001

  type: ClusterIP
